align form labels correctly

--- a/scss/components/_graphs.scss
+++ b/scss/components/_graphs.scss
@@ -45,6 +45,6 @@ $chart-options-width: 14rem;
 	}
 
 	input {
-		padding-right: 0.25rem;
+		margin-right: 0.25rem;
 	}
 }
